8305935: Resolve multiple definition of 'jmm_<interface|version>' when statically linking with JDK native libraries